--- a/RUSLECalculator_dialog_base.ui
+++ b/RUSLECalculator_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>670</width>
-    <height>542</height>
+    <height>592</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>500</y>
+     <x>480</x>
+     <y>550</y>
      <width>171</width>
      <height>32</height>
     </rect>
@@ -35,7 +35,7 @@
      <x>10</x>
      <y>10</y>
      <width>641</width>
-     <height>231</height>
+     <height>271</height>
     </rect>
    </property>
    <property name="title">
@@ -66,7 +66,7 @@
       <string>Erosion of rainfall (R)</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="SoilImage">
+    <widget class="QPushButton" name="buttonR">
      <property name="geometry">
       <rect>
        <x>580</x>
@@ -115,7 +115,7 @@
       <string>Erosivity soil (K)</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="PrecipitationImage">
+    <widget class="QPushButton" name="buttonK">
      <property name="geometry">
       <rect>
        <x>580</x>
@@ -164,7 +164,7 @@
       <string>Vegetation Soil (C)</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="ManagementImage">
+    <widget class="QPushButton" name="buttonC">
      <property name="geometry">
       <rect>
        <x>580</x>
@@ -213,7 +213,7 @@
       <string>Slope lenght (LS)</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="LandCover">
+    <widget class="QPushButton" name="buttonLS">
      <property name="geometry">
       <rect>
        <x>580</x>
@@ -241,7 +241,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>190</y>
+      <y>230</y>
       <width>631</width>
       <height>31</height>
      </rect>
@@ -272,7 +272,56 @@
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="ManagementImage_2">
+    <widget class="QPushButton" name="buttonDem">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>-10</y>
+       <width>51</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>190</y>
+      <width>631</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Qualcosa (P)</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="inputP">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>0</y>
+       <width>451</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="buttonP">
      <property name="geometry">
       <rect>
        <x>580</x>
@@ -290,8 +339,8 @@
   <widget class="QGroupBox" name="groupBox_8">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
+     <x>30</x>
+     <y>300</y>
      <width>621</width>
      <height>141</height>
     </rect>
@@ -424,8 +473,8 @@
   <widget class="QGroupBox" name="groupBox_9">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>400</y>
+     <x>30</x>
+     <y>450</y>
      <width>631</width>
      <height>71</height>
     </rect>
@@ -473,8 +522,8 @@
   <widget class="QGroupBox" name="groupBox_10">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>480</y>
+     <x>30</x>
+     <y>530</y>
      <width>271</width>
      <height>51</height>
     </rect>
