--- a/RUSLECalculator_dialog_base.ui
+++ b/RUSLECalculator_dialog_base.ui
@@ -16,7 +16,7 @@
   <widget class="QDialogButtonBox" name="button_box">
    <property name="geometry">
     <rect>
-     <x>540</x>
+     <x>550</x>
      <y>390</y>
      <width>171</width>
      <height>32</height>
@@ -491,6 +491,19 @@
     <rect>
      <x>680</x>
      <y>200</y>
+     <width>16</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>CheckBox</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkerDEM_2">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>320</y>
      <width>16</width>
      <height>31</height>
     </rect>
