--- a/RUSLECalculator_dialog_base.ui
+++ b/RUSLECalculator_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>739</width>
-    <height>437</height>
+    <height>441</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -393,6 +393,9 @@
      <width>111</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
    </property>
   </widget>
   <widget class="QLabel" name="years_label">
