Adding support for the UI
Adding more support for the UI build in the ui file and in the .py file

--- a/RUSLECalculator_dialog_base.ui
+++ b/RUSLECalculator_dialog_base.ui
@@ -502,7 +502,7 @@
     <string>CheckBox</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkerDEM_2">
+  <widget class="QCheckBox" name="checkerOutput">
    <property name="geometry">
     <rect>
      <x>680</x>
